# pyEpiAneufinder

./: README.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.3.6.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  github_release.yml  pypi_deploy.yml  tests.yml
docs/: api.rst  conf.py  index.rst  input-output.rst  quickstart.rst  revision-log.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  input-output.html  installation.html  objects.inv  quickstart.html  revision-log.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  input-output.doctree  installation.doctree  quickstart.doctree  revision-log.doctree
docs/_build/html/.doctrees/quickstart/: calculating-cnv-burden-per-cell.doctree  calculating-karyogram-metrics.doctree  coverage-profiles-per-cell.doctree  executing-the-program.doctree  index.doctree  splitting-cells-into-clones.doctree
docs/_build/html/_sources/: index.rst.txt  input-output.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/_build/html/_sources/quickstart/: calculating-cnv-burden-per-cell.rst.txt  calculating-karyogram-metrics.rst.txt  coverage-profiles-per-cell.rst.txt  splitting-cells-into-clones.rst.txt
docs/_build/html/quickstart/: calculating-cnv-burden-per-cell.html  calculating-karyogram-metrics.html  coverage-profiles-per-cell.html  executing-the-program.html  index.html  splitting-cells-into-clones.html
docs/quickstart/: calculating-karyogram-metrics.rst  executing-the-program.rst  index.rst
docs/superpowers/specs/: 2026-04-25-pypi-repo-revision-design.md
pyEpiAneufinder/: evaluate_cnv_results.py  karyotype_metrics.py  plotting.py  pyEpiAneufinder.py
pyEpiAneufinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_karyo_gainloss.py  test_metrics.py  test_public_api.py  test_split_subclones.py
