[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyEpiAneufinder"
version = "0.3.5"
description = "Identify copy number variations from single-cell ATAC-seq data"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"

authors = [
  { name = "Katharina Schmid", email = "katharina.schmid@bmc.med.lmu.de" },
  { name = "Aikaterini Symeonidi", email = "asymeonidi@bmc.med.lmu.de" },
  { name = "Angelos Nikolaou", email = "anguelos.nicolaou@gmail.com" },
  { name = "Ida Büschel", email = "Ida.Bueschel@helmholtz-munich.de" },
  { name = "Maria Colomé-Tatché", email = "maria.colome@bmc.med.lmu.de" }
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scipy",
  "anndata",
  "natsort",
  "biopython",
  "scikit-misc",
  "tqdm"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
docs = [
  "sphinx>=7",
  "furo>=2024.0.0",
  "myst-parser>=2",
]

[project.urls]
Homepage = "https://github.com/colomemaria/pyEpiAneufinder"
Repository = "https://github.com/colomemaria/pyEpiAneufinder"
Documentation = "https://pyepianeufinder.readthedocs.io/"

[tool.setuptools]
packages = ["pyEpiAneufinder"]
include-package-data = true
