[build-system]
requires = ["setuptools>=68", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "pyEpiAneufinder"
version = "0.3.6"
description = "Identify copy number variations from single-cell ATAC-seq data"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"

authors = [
  { name = "Katharina Schmid", email = "katharina.schmid@bmc.med.lmu.de" },
  { name = "Aikaterini Symeonidi", email = "asymeonidi@bmc.med.lmu.de" },
  { name = "Angelos Nikolaou", email = "anguelos.nicolaou@gmail.com" },
  { name = "Ida Büschel", email = "Ida.Bueschel@helmholtz-munich.de" },
  { name = "Maria Colomé-Tatché", email = "maria.colome@bmc.med.lmu.de" }
]

dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.2.0",
  "matplotlib>=3.7.1",
  "seaborn>=0.12.2",
  "scipy>=1.8.0",
  "anndata>=0.8.0",
  "natsort>=8.0.2",
  "biopython>=1.79",
  "scikit-misc>=0.5.2",
  "tqdm>=4.67.1"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
docs = [
  "sphinx>=8.1.3",
  "furo>=2025.12.19",
  "myst-parser>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/colomemaria/pyEpiAneufinder"
Repository = "https://github.com/colomemaria/pyEpiAneufinder"
Documentation = "https://pyepianeufinder.readthedocs.io/"

[tool.setuptools]
packages = ["pyEpiAneufinder"]
include-package-data = true
